[package]
name = "pcapfuse"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "FUSE filesystem serving a virtual merged pcapng from many source pcap/pcapng files"

[dependencies]
fuser = "0.17"
pcap-parser = "0.17"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
glob = "0.3"
libc = "0.2"
